--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "concurrently": "^5.3.0",
