--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7"
   }
 }
