--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node dist/index.js",
     "build": "tsc"
   },
@@ -20,7 +20,10 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/mongoose": "^5.11.97",
-    "@types/multer": "^1.4.7"
+    "@types/multer": "^1.4.7",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.1"
   }
 }
