--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,10 +7,6 @@
     "esModuleInterop": true,
     "types": ["node", "jest"]
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
