--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "donkey_mobile_assessment",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.108",
