--- a/backend/package.json
+++ b/backend/package.json
@@ -7,20 +7,30 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
+    "test": "vitest run",
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
+    "@eslint/js": "^9.34.0",
+    "@types/aws-lambda": "^8.10.152",
+    "@types/jest": "^30.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "@types/node": "24.3.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "aws-cdk": "2.1026.0",
+    "eslint": "^9.34.0",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.41.0"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.211.0",
-    "constructs": "^10.0.0"
+    "@aws-lambda-powertools/commons": "^2.25.1",
+    "aws-cdk-lib": "2.212.0",
+    "constructs": "^10.4.2",
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4"
   }
 }
