--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,15 @@
     "@eslint/js": "^9.34.0",
     "@types/aws-lambda": "^8.10.152",
     "@types/jest": "^30.0.0",
-    "eslint-plugin-import": "^2.32.0",
+    "@types/mustache": "^4.2.6",
     "@types/node": "24.3.0",
     "@vitest/coverage-v8": "^3.2.4",
     "aws-cdk": "2.1026.0",
     "eslint": "^9.34.0",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
+    "mustache": "^4.2.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.2",
