--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "esnext",
+    "moduleResolution": "node",
     "lib": [
       "es2022"
     ],
+    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
