--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,6 +12,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
+    "noEmit": true,
     "alwaysStrict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
