--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "@aws-sdk/lib-dynamodb": "^3.876.0",
     "aws-cdk-lib": "2.212.0",
     "constructs": "^10.4.2",
+    "temporal-polyfill": "^0.3.0",
     "ulid": "^3.0.1",
     "vite": "^7.1.3",
     "vitest": "^3.2.4"
