fix: test branch policy

--- a/ .github/workflows/pipeline.yml
+++ b/ .github/workflows/pipeline.yml
@@ -2,7 +2,10 @@ name: Posts app
 
 on:
   push:
-    branches: [ main, feature/* ]
+    branches:
+      - main
+      - feature/*
+  workflow_dispatch: {}
 
 env:
   NODE_VERSION: '22'
