--- a/assessment-mark-overbeek/package.json
+++ b/assessment-mark-overbeek/package.json
@@ -1,9 +1,10 @@
 {
   "name": "assessment-mark-overbeek",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "jest --verbose --detectOpenHandles ./dist",
+    "test": "jest --verbose --detectOpenHandles",
     "start": "node server.js"
   },
   "keywords": [],
@@ -23,13 +24,5 @@
     "jest": "^30.1.3",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.2"
-  },
-  "type": "commonjs",
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    }
   }
 }
