--- a/assessment-mark-overbeek/tsconfig.json
+++ b/assessment-mark-overbeek/tsconfig.json
@@ -1,10 +1,15 @@
 {
-    "compilerOptions": {
-      "module": "CommonJS",
-      "target": "ES6",
-      "rootDir": "./src",
-      "outDir": "./dist",
-      "esModuleInterop": true
-    },
-    "include": ["src/**/*.ts", "tests/**/*.ts"]
-  }
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",               // Enables `import`/`export`
+    "moduleResolution": "Node",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
+}
