--- a/assessment-mark-overbeek/package.json
+++ b/assessment-mark-overbeek/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "jest --verbose --detectOpenHandles",
+    "test": "no testing done yet",
     "start": "node server.js"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.12.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2"
