--- a/assessment-mark-overbeek/package.json
+++ b/assessment-mark-overbeek/package.json
@@ -18,14 +18,7 @@
     "multer": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.27.1",
-    "@jest/globals": "^30.1.2",
     "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
-    "@types/multer": "^2.0.0",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.1.3",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.2"
+    "@types/multer": "^2.0.0"
   }
 }
