--- a/assessment-mark-overbeek/package.json
+++ b/assessment-mark-overbeek/package.json
@@ -2,10 +2,12 @@
   "name": "assessment-mark-overbeek",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "no testing done yet",
-    "start": "node server.js"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "tsx watch src/server.ts",
+    "test": "node --test"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/multer": "^2.0.0"
+    "@types/multer": "^2.0.0",
+    "@types/node": "^20.11.19",
+    "tsx": "^4.16.2"
   }
 }
