--- a/assessment-mark-overbeek/tsconfig.json
+++ b/assessment-mark-overbeek/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",               // Enables `import`/`export`
-    "moduleResolution": "Node",
+    "module": "nodenext",               // Enables `import`/`export`
+    "moduleResolution": "nodenext",
     "outDir": "./dist",
     "rootDir": "./src",
     "esModuleInterop": true,
